--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-<a href="mailto:calvin.d.morton@gmail.com">Email Me!</a> 
+<a href="mailto:calvin.d.morton@gmail.com?subject=no you">Email Me!</a> 
 </body>
 </html>
