--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-<a href="mailto:calvin.d.morton@gmail.com?subject=no%20you">Email Me!</a> 
+<embed src = "yippe.mp4" width =100% height = 100%>
 </body>
 </html>
